<?xml version="1.0" encoding="UTF-8"?>
<!-- 这是 Maven 项目对象模型（POM）的根元素-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <!-- POM的版本 -->
    <modelVersion>4.0.0</modelVersion>

    <!--  模块信息  -->
    <name>coelectron-mybatis-plus</name>
    <description>Quickly build the SpringBoot project mybatis-plus module</description>
    <url>https://github.com/CyberGlint/coelectron</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>GEKSS5289</id>
            <name>shushun</name>
            <email>496966859@qq.com</email>
        </developer>
    </developers>

    <parent>
        <groupId>com.cyberglint</groupId>
        <artifactId>coelectron</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>coelectron-mybatis</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
        </dependency>
        <dependency>
            <groupId>com.cyberglint</groupId>
            <artifactId>coelectron-common</artifactId>
        </dependency>
    </dependencies>

</project>